home_creadit_defaukt_risk-app/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
  labels:
    app: my-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app-container
        image: localhost:8082/home_credit_default_risk:1.0.0.13
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "5000Mi"
            cpu: "2"
