home_creadit_defaukt_risk-app/python-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app-service
spec:
  selector:
    app: my-python-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
